WIP:  Cleanup and fighting with working folders.